syntax = "proto3";

package events;

enum Workflow {
    WORKFLOW_CREATED = 0;
    WORKFLOW_UPDATED = 1;
    WORKFLOW_PARSED = 2;
    WORKFLOW_DELETED = 3;
    WORKFLOW_PARSING_FAILED = 4;
}

enum Invocation {
    INVOCATION_CREATED = 0; // origin: User
    INVOCATION_COMPLETED = 1; // origin: Engine
    INVOCATION_CANCELED = 2; // origin: User
    INVOCATION_TASK_ADDED = 3;
    INVOCATION_FAILED = 4;
}

enum Task {
    TASK_STARTED = 0; // origin: Engine
    TASK_SKIPPED = 1; // origin: Engine
    TASK_SUCCEEDED = 4; // origin: Task
    TASK_FAILED = 5; // origin: Task
    TASK_ABORTED = 6; // origin: Engine
}
